preload font and images to reduce flasing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/logo.png" />
+    <link rel="preload" href="/assets/book.png" as="image">
+    <link rel="preload" href="/assets/skillscroll.webp" as="image">
+    <link rel="preload" href="/assets/fonts/MorrisRomanBlack.otf" as="font" type="font/otf" crossorigin="anonymous">
+    <link rel="preload" href="/assets/fonts/CELTG.TTF" as="font" type="font/TTF" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Know about me</title>
   </head>
