verification file not worling had to use tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2BK690V9QE"></script>
+<meta name="google-site-verification" content="LxobVGjQZPYFXKzVEQ8zAnFNj1cDNB5k6rZXRC1ez0E" />
+<meta name="description" content="I am swayam jain and i am ready to work with you to make your website cool,responsive,and fabulous">
+    <meta name="keywords" content="web-devloper, website designer,freelancer, readytowork, kawardha, raupur, new raipur, raipur, chhattisgarh, india, swayamjain.github.io,reactjs, javascript, html, css, web development, web design, portfolio, personal website, developer portfolio, software engineer, frontend developer, backend developer, full stack developer, UI/UX designer" />
+    <meta name="author" content="Swayam Jain" />
+    <meta name="robots" content="index, follow" />
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
